detect Spring apps in Docker Containers